--- a/src/index.css
+++ b/src/index.css
@@ -421,12 +421,18 @@ body{
     text-align: justify;
   }
 
+  .print-letter-block {
+    display: flex;
+    flex-direction: column;
+    min-height: 160px;
+  }
+
   .print-signature {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
-    margin-top: 60px;
+    margin-top: auto;
     margin-left: auto;
     font-size: 10pt;
     max-width: 240px;
